match docs to 1.5.0 and sync changelog + workflow

--- a/contents/docs/classes/map-object/index.mdx
+++ b/contents/docs/classes/map-object/index.mdx
@@ -9,13 +9,13 @@ description: MapObject represents a placed object on an object layer. Access via
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `name` | Object name. | <code>str</code> |
-| `rect` | Object bounding rectangle. | <code><a href="/docs/classes/rect">Rect</a></code> |
-| `shape_type` | Shape type enum for the object. | <code><a href="/docs/classes/map-object">MapObject</a>.ShapeType</code> |
-| `text` | Text properties if the object is text. | <code><a href="/docs/classes/text-properties">TextProperties</a></code> |
-| `tile_id` | Associated tile id when the object is a tile. | <code>int</code> |
-| `transform` | Transform component for the object. | <code><a href="/docs/classes/transform">Transform</a></code> |
-| `type` | Object type string. | <code>str</code> |
-| `uid` | Unique object identifier. | <code>int</code> |
-| `vertices` | Vertices for polygon/polyline shapes. | <code>Vec2List</code> |
-| `visible` | Visibility flag. | <code>bool</code> |
+| `transform` |  | <code><a href="/docs/classes/transform">Transform</a></code> |
+| `visible` |  | <code>bool</code> |
+| `name` |  | <code>str</code> |
+| `rect` |  | <code><a href="/docs/classes/rect">Rect</a></code> |
+| `shape_type` |  | <code><a href="/docs/classes/map-object">MapObject</a>.ShapeType</code> |
+| `text` |  | <code><a href="/docs/classes/text-properties">TextProperties</a></code> |
+| `tile_id` |  | <code>int</code> |
+| `type` |  | <code>str</code> |
+| `uid` |  | <code>int</code> |
+| `vertices` |  | <code>Vec2List</code> |
