--- a/contents/docs/classes/map/index.mdx
+++ b/contents/docs/classes/map/index.mdx
@@ -16,17 +16,17 @@ Map represents a loaded TMX map and provides access to its layers and tilesets.
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `background_color` | Map background color. | <code><a href="/docs/classes/color">Color</a></code> |
-| `bounds` | Map bounds in pixels. | <code><a href="/docs/classes/rect">Rect</a></code> |
-| `hex_side_length` | Hex side length for hex maps. | <code>float</code> |
-| `layers` | List of layers in the map. | <code>LayerList</code> |
-| `map_size` | Map dimensions in tiles. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `orientation` | Map orientation enum. | <code><a href="/docs/manual/constants#maporientation">MapOrientation</a></code> |
-| `render_order` | Tile render order enum. | <code><a href="/docs/manual/constants#maprenderorder">MapRenderOrder</a></code> |
-| `stagger_axis` | Stagger axis enum for staggered/hex maps. | <code><a href="/docs/manual/constants#mapstaggeraxis">MapStaggerAxis</a></code> |
-| `stagger_index` | Stagger index enum for staggered/hex maps. | <code><a href="/docs/manual/constants#mapstaggerindex">MapStaggerIndex</a></code> |
-| `tile_sets` | List of tilesets used by the map. | <code>TileSetList</code> |
-| `tile_size` | Size of tiles in pixels. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `background_color` |  | <code><a href="/docs/classes/color">Color</a></code> |
+| `bounds` |  | <code><a href="/docs/classes/rect">Rect</a></code> |
+| `hex_side_length` |  | <code>float</code> |
+| `layers` |  | <code>LayerList</code> |
+| `map_size` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `orientation` |  | <code><a href="/docs/manual/constants#maporientation">MapOrientation</a></code> |
+| `render_order` |  | <code><a href="/docs/manual/constants#maprenderorder">MapRenderOrder</a></code> |
+| `stagger_axis` |  | <code><a href="/docs/manual/constants#mapstaggeraxis">MapStaggerAxis</a></code> |
+| `stagger_index` |  | <code><a href="/docs/manual/constants#mapstaggerindex">MapStaggerIndex</a></code> |
+| `tile_sets` |  | <code>TileSetList</code> |
+| `tile_size` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
 
 ## Methods
 ---
