--- a/contents/docs/classes/object-group/index.mdx
+++ b/contents/docs/classes/object-group/index.mdx
@@ -9,10 +9,10 @@ description: ObjectGroup is a layer containing placed MapObjects. Access via the
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `color` | Tint color for non-tile objects. | <code><a href="/docs/classes/color">Color</a></code> |
-| `draw_order` | Drawing order for objects in the group. | <code><a href="/docs/classes/object-group">ObjectGroup</a>.DrawOrder</code> |
-| `objects` | List of objects in the group. | <code>MapObjectList</code> |
-| `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
+| `color` |  | <code><a href="/docs/classes/color">Color</a></code> |
+| `draw_order` |  | <code><a href="/docs/classes/object-group">ObjectGroup</a>.DrawOrder</code> |
+| `objects` |  | <code>MapObjectList</code> |
+| `opacity` |  | <code>float</code> |
 
 ## Methods
 ---
