--- a/contents/docs/classes/tile-layer/index.mdx
+++ b/contents/docs/classes/tile-layer/index.mdx
@@ -9,8 +9,8 @@ description: TileLayer represents a grid of tiles within the map. Access via the
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
-| `tiles` | List of tiles in the layer grid. | <code><a href="/docs/classes/tile-layer">TileLayer</a>.TileLayerTileList</code> |
+| `opacity` |  | <code>float</code> |
+| `tiles` |  | <code><a href="/docs/classes/tile-layer">TileLayer</a>.TileLayerTileList</code> |
 
 ## Methods
 ---
