--- a/contents/docs/manual/changelog/index.mdx
+++ b/contents/docs/manual/changelog/index.mdx
@@ -9,19 +9,34 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ---
 
-## [1.5.1] - 2026-01-24
+## [1.6.0] - No Release Date Yet
 
-<a id="added151"></a>
+<a id="added160"></a>
 ### Added
 - Added `Vec2.ZERO`, `Vec2.UP`, `Vec2.DOWN`, `Vec2.LEFT`, and `Vec2.RIGHT` constants for common vector directions.
 - Added the ability to multiply two `Vec2` objects element-wise using the `*` operator.
-- Added docstrings to every enum and their values, as well as to any properties of tilemap-related objects that were missing them.
 - New `transform` submodule with `compose` and `compose_chain` functions for parenting transforms.
+- New `draw.circles` function for drawing multiple circles in a single call (~3.5x faster than multiple `draw.circle` calls in testing).
+- New `draw.polygons` function for drawing multiple polygons in a single call.
+- Added `texture.clip_area` property for getting/setting the texture's clipping area.
 
-<a id="changed151"></a>
+<a id="changed160"></a>
 ### Changed
 - `Vec2` boolean conversion now checks for both components being exactly zero, rather than using a tolerance.
 - `fx.move_to` function now requires a `Vec2` for the `pos` parameter instead of accepting an optional argument of any object type.
+- Greatly improved quality and performance of `draw.circle` and `draw.polygon` by switching to a GPU-based rendering approach.
+- Animation controller's `load_sprite_sheet` method renamed to `add_sheet` and `clip` property renamed to `frame_area`.
+- `renderer.draw` function now accepts optional `anchor` and `pivot` parameters for specifying the drawing anchor and pivot points, both of `Vec2` type.
+- Both text and pixel array drawing functions now accept an optional `anchor` parameter of `Vec2` type for specifying the drawing anchor point.
+- `Anchor` enum changed to a class with static constants for common anchor points represented as `Vec2` objects.
+
+<a id="removed160"></a>
+### Removed
+- Implicit conversians from sequences to `Vec2`, `Rect`, `Line`, `Color`, and `PolarCoordinate` have been removed for better type safety. Use explicit constructors instead.
+- Removed `src` parameter from `renderer.draw` function.
+- Removed `clip` attribute from `Sprite` class.
+- `Transform` class no longer contains `pivot`, `size`, or `anchor` attributes.
+- Removed most opaque list types except for tilemap related ones due to... uselessness.
 
 
 ---
