--- a/contents/docs/classes/layer/index.mdx
+++ b/contents/docs/classes/layer/index.mdx
@@ -9,11 +9,11 @@ description: Layer is the base class for all tilemap layers. Access via the 'til
 
 | Name | Description | Type |
 | --- | --- | --- |
-| `name` | Layer name. | <code>str</code> |
-| `offset` | Per-layer drawing offset. | <code><a href="/docs/classes/vec2">Vec2</a></code> |
-| `opacity` | Layer opacity from 0.0 to 1.0. | <code>float</code> |
-| `type` | Layer type enum. | <code><a href="/docs/manual/constants#layertype">LayerType</a></code> |
-| `visible` | Whether the layer is visible. | <code>bool</code> |
+| `offset` |  | <code><a href="/docs/classes/vec2">Vec2</a></code> |
+| `visible` |  | <code>bool</code> |
+| `name` |  | <code>str</code> |
+| `opacity` |  | <code>float</code> |
+| `type` |  | <code><a href="/docs/manual/constants#layertype">LayerType</a></code> |
 
 ## Methods
 ---
